--- a/css/header.css
+++ b/css/header.css
@@ -246,13 +246,13 @@ button.btn_modal_login{
     height: auto;
   }
   nav.nav{
-    margin: 0 auto;
+    margin: 0px auto;
     width: 100%;
-    height: 100vh;
-    top: 0;
+    height: calc(100vh - 51px);
+    top: 51px;
     display: flex;
     flex-direction: column;
-    background: rgba(255, 255, 255, 0.95);;
+    background: rgba(255, 255, 255, 0.95);
     position: absolute;
     overflow-y: auto;
   }
@@ -276,16 +276,29 @@ button.btn_modal_login{
     justify-content: flex-start !important;
     align-items: flex-start;
     font-size: 16px;
+    border-bottom: .5px solid rgba(0, 0, 0, 0.1);
+
   }
-  ul.nav_list li a{
+  
+  ul.nav_list > li > a{
     padding-left: 0 !important;
+    display: block;
+    width: 100%;
+    border: none !important;
+  }
+  ul.nav_list > li > a:hover{
+    padding-left: 0 !important;
+    display: block;
+    width: 100%;
+    text-align: left !important;
+    border: none !important;
   }
 
   div.login_signup_block{
     width: 100%;
     flex-direction: column;
     text-align: center;
-    margin: 36px 0 50px;
+    margin: 20px 0 50px;
   }
   button.btn_modal_login, button.btn_modal_signup{
     width: 90%;
@@ -305,6 +318,10 @@ button.btn_modal_login{
     text-align: left;
     height: auto;
   }
+  span.triangle{
+    display: block;
+    cursor: pointer;
+  }
   span.triangle::after{
     content: "▾";
   }
@@ -320,21 +337,19 @@ button.btn_modal_login{
     top: 0;
     margin-top: 20px;
     padding-left: 12px;
-  }
-  ul.solution_list{
     display: none;
+  }
+  .-open{
+    display: block !important;
   }
 
   nav.nav > ul.nav_list > li > div.solution_block:hover ul.solution_list{
-    background: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+    display: none;
   }
 
   nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li{
     width: 100%;
+    border: none;
   }
   nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a{
     display: block;
@@ -342,10 +357,10 @@ button.btn_modal_login{
     padding: 12px 0 12px 12px !important;
   }
 
-  nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a:focus{
+  nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a:hover{
     background-color: rgba(247, 204, 197, 0.5);
     border-radius: 5px;
-    text-decoration: underline;
+    text-decoration: none !important;
   }
   
   
