--- a/css/check.css
+++ b/css/check.css
@@ -15,7 +15,7 @@ img{
  
 
 div.question_block{
-  width: 90%;
+  width: 1080px;
   margin: 30px auto 60px;
   background: rgba(238, 238, 238, 0.8);
   border-radius: 20px;
@@ -98,6 +98,10 @@ img.question{
 /*====== 行動版 RWD | 320px ~ 414px ======*/
 @media screen and (min-width: 320px) and (max-width: 413.98px){
 
+  div.question_block{
+    width: 90%;
+
+  }
   div.rightside{
     display: none;
   }
@@ -119,6 +123,10 @@ img.question{
 /*====== 行動版 RWD | 414px ~ 1080px ======*/
 @media screen and (min-width: 414px) and (max-width: 1079.98px){
 
+  div.question_block{
+    width: 90%;
+
+  }
   div.rightside{
     display: none;
   }
