--- a/css/community.css
+++ b/css/community.css
@@ -21,7 +21,7 @@ img, embed{
 /*====== 互動對話框 ======*/
 
 div.dialog_container{
-  width: 90%;
+  width: 1080px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +31,7 @@ div.dialog_container{
 }
 div.left_dialog_container{
   width: 100%;
+  max-width: 1080px;
   position: absolute;
   left: 0;
   top: 0;
@@ -55,6 +56,7 @@ div.left_dialog_container::after{
 }
 div.right_dialog_container{
   width: 100%;
+  max-width: 1080px;
   position: absolute;
   right: 0;
   top: 25%;
@@ -106,6 +108,8 @@ div.right_dialog{
 
   div.dialog_container{
     margin-top: 60px;
+    width: 90%;
+
   }
   div.left_dialog, div.right_dialog{
     width: 100%;
@@ -139,6 +143,8 @@ div.right_dialog{
 
   div.dialog_container{
     margin-top: 80px;
+    width: 90%;
+
   }
   div.left_dialog, div.right_dialog{
     width: 80%;
@@ -159,6 +165,8 @@ div.right_dialog{
 
   div.dialog_container{
     flex-direction: column;
+    width: 90%;
+
   }
   div.right_dialog_container{
     top: 210px;
@@ -171,6 +179,16 @@ div.right_dialog{
   }
 }  
 
+/*====== 行動版 RWD | 960px ~ 1200px ======*/
+@media screen and (min-width: 960px) and (max-width: 1199.98px){
+
+  div.dialog_container{
+    width: 90%;
+
+  }
+
+}  
+
 
 
 
@@ -178,7 +196,7 @@ div.right_dialog{
 /*====== 會動的腳踏車 ======*/
 
 div.bridge_banner{
-  width: 90%;
+  width: 1080px;
   margin: -60px auto 40px;
 }
 div.bridge_title{
@@ -223,6 +241,8 @@ div.line{
 
   div.bridge_banner{
     margin-top: 0;
+    width: 90%;
+
   }
   div.bridge_title{
     font-size: 24px;
@@ -238,6 +258,8 @@ div.line{
 
   div.bridge_banner{
     margin-top: 50px;
+    width: 90%;
+
   }
   div.bridge_title{
     font-size: 24px;
@@ -246,6 +268,15 @@ div.line{
     width: 120px;
   }
 }  
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+  div.bridge_banner{
+    width: 90%;
+
+  }
+}
 
 
 /*====== 社群介紹 intro ======*/
