--- a/css/dream_story.css
+++ b/css/dream_story.css
@@ -174,7 +174,7 @@ a.test:hover{
     margin: 30px 0;
   }
   div.test_area{
-    margin-bottom: 30px;
+    margin: 40px 0;
   }
 
 }  
@@ -196,7 +196,7 @@ a.test:hover{
     margin: 30px 0;
   }
   div.test_area{
-    margin-bottom: 30px;
+    margin: 40px 0;
   }
 
 }  
