--- a/css/dream_story.css
+++ b/css/dream_story.css
@@ -248,6 +248,7 @@ input[type="search"]{
   outline: none;
   font-size: 16px;
   background: none;
+  -webkit-appearance:none;
 }
 input::-webkit-input-placeholder{
 color: #363B3F;
