--- a/css/dream_map.css
+++ b/css/dream_map.css
@@ -160,7 +160,7 @@ div.intro_block2{
     text-align: center;
 }
 div.grid-container {
-  width: 90%;
+  width: 1080px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: auto auto auto;
@@ -268,6 +268,7 @@ div.cards_banner{
     font-size: 22px;
   }
   div.grid-container {
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -289,6 +290,7 @@ div.cards_banner{
 @media screen and (min-width: 414px) and (max-width: 767.98px){
 
   div.grid-container {
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -307,6 +309,7 @@ div.cards_banner{
 @media screen and (min-width: 768px) and (max-width: 1199.98px){
 
   div.grid-container {
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -355,7 +358,7 @@ div.dream_story_block{
   margin: 0 auto;
   text-align: center;
   padding-top: 90px;
-  width: 90%;
+  width: 1080px;
 }
 div.story_block_intro{
   display: flex;
@@ -519,6 +522,7 @@ a.more_story:hover{
 @media screen and (min-width: 320px) and (max-width: 413.98px){
 
   div.dream_story_block{
+    width: 90%;
     margin-top: 0px;
     padding-top: 0;
     display: flex;
@@ -590,6 +594,7 @@ a.more_story:hover{
 @media screen and (min-width: 414px) and (max-width: 767.98px){
 
   div.dream_story_block{
+    width: 90%;
     margin-top: 0px;
     padding-top: 0;
     display: flex;
@@ -665,6 +670,10 @@ a.more_story:hover{
 
 /*====== 行動版 RWD | 768px ~ 1200px ======*/
 @media screen and (min-width: 768px) and (max-width: 1199.98px){
+  
+  div.dream_story_block{
+    width: 90%;
+  }  
 
   div.intro_text{
     width: 100%;
