--- a/css/dream_story.css
+++ b/css/dream_story.css
@@ -22,7 +22,7 @@ img, embed{
 
 /*======= 麵包屑 =======*/
 div.bread{
-  width: 90%;
+  width: 1080px;
   margin: 70px auto 0;
   font-size: 14px;
 }
@@ -48,7 +48,7 @@ span.page_now{
 
 /*====== 部落格二欄式排版 ======*/
 div.parent_container{
-  width: 90%;
+  width: 1080px;
   /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
@@ -59,15 +59,28 @@ div.parent_container{
 /*====== 行動版 RWD | 320px ~ 768px ======*/
 @media screen and (min-width: 320px) and (max-width: 767.98px){
   div.bread{
+    width: 90%;
     margin-top: 40px;
   }
   div.parent_container{
+    width: 90%;
     display: flex;
     flex-direction: column;
     margin: 30px auto;
   
   }
 } 
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+  div.bread{
+    width: 90%;
+  }
+  div.parent_container{
+    width: 90%;
+  }
+} 
+
 
 
 /*=== 左側文章區域 ===*/
