--- a/css/header.css
+++ b/css/header.css
@@ -55,7 +55,7 @@ header.header{
   top: 0;
   left: 0;
   right: 0;
-  height: 60px;
+  height: 66px;
   /* opacity: .91; */
   padding-top: 0;
   transition: all 0.3s;
@@ -63,6 +63,7 @@ header.header{
   min-width: 1200px;
   margin: 0 auto; 
   z-index: 10;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3);
 }
 
 /*====== 導覽列 ======*/
@@ -154,7 +155,7 @@ nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list{
   margin-top: 0;
   padding: 0;
   position: absolute;
-  top: 33px;
+  top: 31px;
   left: 0;
   width: 100%;
   display: none;
@@ -249,14 +250,15 @@ button.btn_modal_login{
   nav.nav{
     margin: 0px auto;
     width: 100%;
-    height: calc(100vh - 45px);
-    top: 45px;
+    height: calc(100vh - 50px);
+    top: 50px;
     display: flex;
     flex-direction: column;
     background: rgba(255, 255, 255, 0.97);
     position: absolute;
     overflow-y: auto;
     z-index: 10;
+    padding-bottom: 80px;
   }
   nav.nav{
     display: none;
@@ -268,8 +270,9 @@ button.btn_modal_login{
     align-items: center !important;
     width: 100% !important;
     padding: 0 !important;
-    transform: translateY(5%);
+    transform: translateY(20px);
     margin: 0 auto !important;
+    height: auto;
   }
   ul.nav_list li{
     width: 90%;
@@ -300,7 +303,8 @@ button.btn_modal_login{
     width: 100%;
     flex-direction: column;
     text-align: center;
-    margin: 20px 0 50px;
+    margin: 40px 0 50px;
+    height: auto;
   }
   button.btn_modal_login, button.btn_modal_signup{
     width: 90%;
@@ -424,7 +428,7 @@ button.btn_modal_login{
   }
 
   nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list{
-    top: 32px;
+    top: 31px;
   }
 
  div.login_signup_block{
