--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ img, embed{
 /*====== 首頁進場 banner ======*/
 
 div.index_first_banner{
-  min-width: 1200px;
+  min-width: 100%;
   height: 90vh;
   min-height: 540px;
   margin: 0 auto;
@@ -38,9 +38,8 @@ div.index_first_banner_content{
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 1200px;
+  width: 1080px;
 }
-
 
 
 div.index_first_banner_slogan, div.index_first_banner_introduction{
@@ -114,7 +113,6 @@ img.scroll_down{
   div.index_first_banner{
     min-width: 100%;
     flex-direction: column;
-    /* height: auto; */
     height: 70vh;
   }
   div.index_first_banner_slogan{
@@ -123,7 +121,7 @@ img.scroll_down{
   div.index_first_banner_introduction{
     width: 100%;
     margin: 0 auto;
-    padding: 20px 12px 36px;
+    padding: 20px 0px 36px;
     font-size: 16px;
   }
 
@@ -149,7 +147,7 @@ img.scroll_down{
 /*====== 行動版 RWD | 414px ~ 768px ======*/
 @media screen and (min-width: 414px) and (max-width: 767.98px){
   div.index_first_banner_content{
-    width: 100%;
+    width: 90%;
     flex-direction: column;
     margin-top: 20px;
     text-align: center;
@@ -188,7 +186,7 @@ img.scroll_down{
 
   div.index_first_banner{
     min-width: 100%;
-    height: 90vh;
+    height: 70vh;
     margin: 0;
     
   }
@@ -198,10 +196,11 @@ img.scroll_down{
   }
 
   div.banner_leftside{
-    width: 60%;
+    width: 50%;
+    padding-left: 20px;
   }
   div.index_first_banner_slogan{
-    font-size: 34px;
+    font-size: 32px;
   }
 
   br.-break{
@@ -218,6 +217,17 @@ img.scroll_down{
   }
 
 } 
+
+@media screen and (min-width: 768px) and (max-width:889.98px){
+  img.start{
+    display: none;
+  }
+  div.banner_leftside{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+}  
 
 
 
@@ -359,15 +369,17 @@ a.step_one_btn:hover{
   }
  
   div.steps_guide{
-    width: 100%;
+    width: 90%;
     margin-top: 0px;
     justify-content: space-between;
   }
   div.steps_guide div.steps_intro{
     font-size: 16px;
     width: 100%;
-    /* min-width: 320px; */
-    /* transform: translateX(-10%); */
+    transform: translateX(0) !important;
+  }
+  img.bird_guide{
+    display: none !important;
   }
   
 
@@ -453,12 +465,7 @@ a.step_one_btn:hover{
     font-size: 16px;
     width: 100%;
   }
-  img.bird_guide{
-    width: 50px; 
-    height: 50px !important;
-    flex-shrink: 0;
-  }
-
+ 
 }  
 
 
@@ -472,11 +479,11 @@ a.step_one_btn:hover{
   div.steps_guide{
     width: 100%;
     margin-top: 20px;
-    justify-content: space-between;
+    justify-content: center;
   }
   div.steps_guide div.steps_intro{
     font-size: 16px;
-    width: 100%;
+    width: 400px;
   }
  
 
@@ -571,16 +578,15 @@ div.steps_container{
   }
  
   div.steps_guide{
-    width: 100%;
+    width: 90%;
     margin-top: 20px;
-    justify-content: center;
+    justify-content: flex-start;
     position: relative;
   }
-  div.steps_guide div.steps_intro{
-    font-size: 16px;
-    width: 90%;
-    min-width: 320px;
-    transform: translateX(0%) !important;
+
+  div.steps_intro{
+    width: 660px;
+    transform: translateX(45px) !important;
   }
   img.bird_guide{
     height: 60px; 
