--- a/css/dream_story.css
+++ b/css/dream_story.css
@@ -32,6 +32,7 @@ a.index, a.previous{
   margin-right: 5px;
   display: inline-block;
   padding-bottom: 3px;
+  border-bottom: 1px solid transparent;
 }
 a.index:hover, a.previous:hover{
   border-bottom: 1px solid black;
@@ -250,6 +251,9 @@ div.search_bar{
   justify-content: space-between;
   margin-bottom: 20px;
   position: relative;
+}
+form.search_form{
+  width: 100% !important;
 }
 input[type="search"]{
   width: 100%;
